<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/icon_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:theme="@style/CustomEditText"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_gray"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:hint="@string/str_signin_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/gray"
            android:textSize="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/CustomEditText"
        app:endIconTint="@color/dark_gray"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:hint="@string/str_signin_password"
            android:inputType="textPassword"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/gray"
            android:textSize="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/str_signin_signin"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:backgroundTint="@color/primary"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtFindPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_signin_forgot_password"
        android:textColor="@color/dark_gray"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/divider"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNaver"
        app:layout_constraintEnd_toStartOf="@+id/txtSignUp"
        app:layout_constraintStart_toEndOf="@+id/txtFindPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        app:srcCompat="@drawable/oval_darkgray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_signin_signup"
        android:textColor="@color/dark_gray"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnNaver"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/oval_naver_green_ripple"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_naver"
        android:tint="@color/naver_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnKakao"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnKakao"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/oval_kakao_yellow_ripple"
        android:padding="14dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_kakao"
        android:tint="@color/kakao_black"
        app:layout_constraintBottom_toBottomOf="@+id/btnNaver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNaver"
        app:layout_constraintTop_toTopOf="@+id/btnNaver" />

</androidx.constraintlayout.widget.ConstraintLayout>