<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_lightergray_top_rounded_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/rectangle_rounded_12dp_primary_outlined_1dp"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/str_bottomsheet_status_update"
            android:textColor="@color/colorPrimary"
            android:textSize="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_gray"
            android:textSize="13dp"
            app:layout_constraintBottom_toBottomOf="@+id/update"
            app:layout_constraintStart_toEndOf="@+id/update"
            app:layout_constraintTop_toTopOf="@+id/update"
            tools:text="10:18:51" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtName"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/lottie_favorite" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="end"
        android:fontFamily="@font/pretendard_bold"
        android:maxLines="1"
        android:textColor="@color/colorSecondary"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lottie"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        tools:text="4924. 논현동가구거리" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="@+id/txtName"
        app:layout_constraintStart_toStartOf="@+id/lottie"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/qrBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/str_bottomsheet_status_qrbike"
        android:textColor="@color/colorSecondary"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lottie"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtQrBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/pretendard_bold"
        android:textColor="@color/colorSecondary"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/qrBike"
        app:layout_constraintStart_toEndOf="@+id/qrBike"
        app:layout_constraintTop_toTopOf="@+id/qrBike"
        tools:text="2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="@+id/qrBike"
        app:layout_constraintStart_toEndOf="@+id/txtQrBike"
        app:layout_constraintTop_toTopOf="@+id/qrBike" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/elecBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/str_bottomsheet_status_elecbike"
        android:textColor="@color/colorSecondary"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/qrBike"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="@+id/qrBike" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtElecBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/pretendard_bold"
        android:textColor="@color/colorSecondary"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtQrBike"
        app:layout_constraintStart_toEndOf="@+id/elecBike"
        app:layout_constraintTop_toTopOf="@+id/txtQrBike"
        tools:text="8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:textColor="@color/colorPrimary"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/qrBike"
        app:layout_constraintEnd_toEndOf="@+id/txtName"
        app:layout_constraintTop_toTopOf="@+id/qrBike"
        tools:text="196.1m" />

</androidx.constraintlayout.widget.ConstraintLayout>